@@ -4,23 +4,23 @@ comment "Binutils Options"
 
 choice
 	prompt "Binutils Version"
-	default BR2_BINUTILS_VERSION_2_19_1 if BR2_cortex_m3 || BR2_cortex_m0
-	default BR2_BINUTILS_VERSION_2_19 if !BR2_avr32 && !BR2_cortex_m3 && !BR2_cortex_m0 && !BR2_m9s12x
+	default BR2_BINUTILS_VERSION_2_19_1 if BR2_cortex_a5 || BR2_cortex_a8 || BR2_cortex_m3 || BR2_cortex_m0
+	default BR2_BINUTILS_VERSION_2_19 if !BR2_avr32 && !BR2_cortex_a5 && !BR2_cortex_a8 && !BR2_cortex_m3 && !BR2_cortex_m0 && !BR2_m9s12x
 	default BR2_BINUTILS_VERSION_2_18 if BR2_m9s12x
-	default BR2_BINUTILS_VERSION_2_17 if !BR2_cortex_m3 && !BR2_cortex_m0 && !BR2_m9s12x
+	default BR2_BINUTILS_VERSION_2_17 if !BR2_cortex_a5 && !BR2_cortex_a8 && !BR2_cortex_m3 && !BR2_cortex_m0 && !BR2_m9s12x
 	help
 	  Select the version of binutils you wish to use.
 
 	config BR2_BINUTILS_VERSION_2_17
-		depends !BR2_nios2 && !BR2_cortex_m3 && !BR2_cortex_m0 && !BR2_m9s12x
+		depends !BR2_nios2 && !BR2_cortex_a5 && !BR2_cortex_a8 && !BR2_cortex_m3 && !BR2_cortex_m0 && !BR2_m9s12x
 		bool "binutils 2.17"
 
 	config BR2_BINUTILS_VERSION_2_18
-		depends !BR2_avr32 && !BR2_nios2 && !BR2_cortex_m3 && !BR2_cortex_m0
+		depends !BR2_avr32 && !BR2_nios2 && !BR2_cortex_a5 && !BR2_cortex_a8 && !BR2_cortex_m3 && !BR2_cortex_m0
 		bool "binutils 2.18"
 
 	config BR2_BINUTILS_VERSION_2_19
-		depends !BR2_avr32 && !BR2_nios2 && !BR2_cortex_m3 && !BR2_cortex_m0 &&!BR2_m9s12x
+		depends !BR2_avr32 && !BR2_nios2 && !BR2_cortex_a5 && !BR2_cortex_a8 && !BR2_cortex_m3 && !BR2_cortex_m0 &&!BR2_m9s12x
 		bool "binutils 2.19"
 
 	config BR2_BINUTILS_VERSION_2_19_1
